<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundForm">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bar_bizbong"/>
    <TextView
        android:text="@string/domanda"
        android:textStyle="bold"
        android:textSize="12pt"
        android:textColor="@color/whiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <Button
            android:id="@+id/yesButton"
            android:text="@string/conferma"
            android:textSize="16pt"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/noButton"
            android:text="@string/nonconferma"
            android:textSize="16pt"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>